--- a/package.json
+++ b/package.json
@@ -13,23 +13,25 @@
     "qs": "^6.5.2",
     "store2": "^2.7.0",
     "vue": "^2.5.17",
-    "vue-class-component": "^6.0.0",
-    "vue-property-decorator": "^7.0.0",
+    "vue-class-component": "^6.3.2",
+    "vue-property-decorator": "^7.2.0",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1",
     "vuex-class": "^0.3.1"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "^3.0.3",
-    "@vue/cli-plugin-eslint": "^3.0.3",
-    "@vue/cli-plugin-typescript": "^3.0.3",
-    "@vue/cli-service": "^3.0.3",
-    "@vue/eslint-config-prettier": "^3.0.3",
-    "@vue/eslint-config-typescript": "^3.0.3",
+    "@types/node": "^10.12.0",
+    "@vue/cli-plugin-babel": "^3.0.5",
+    "@vue/cli-plugin-eslint": "^3.0.5",
+    "@vue/cli-plugin-typescript": "^3.0.5",
+    "@vue/cli-service": "^3.0.5",
+    "@vue/eslint-config-prettier": "^3.0.5",
+    "@vue/eslint-config-typescript": "^3.0.5",
     "less": "^3.0.4",
     "less-loader": "^4.1.0",
-    "lint-staged": "^7.2.2",
-    "typescript": "^3.0.3",
+    "lint-staged": "^7.3.0",
+    "typescript": "3.1.3",
+    "typescript-eslint-parser": "^20.0.0",
     "vue-template-compiler": "^2.5.17",
     "vuex-router-sync": "^5.0.0"
   },
