--- a/package.json
+++ b/package.json
@@ -10,29 +10,31 @@
   "dependencies": {
     "@types/qs": "^6.5.1",
     "axios": "^0.18.0",
-    "qs": "^6.5.2",
-    "store2": "^2.7.0",
-    "vue": "^2.5.17",
+    "lodash.get": "^4.4.2",
+    "qs": "^6.6.0",
+    "store2": "^2.7.1",
+    "vue": "^2.5.22",
     "vue-class-component": "^6.3.2",
-    "vue-property-decorator": "^7.2.0",
-    "vue-router": "^3.0.1",
-    "vuex": "^3.0.1",
+    "vue-property-decorator": "^7.3.0",
+    "vue-router": "^3.0.2",
+    "vuex": "^3.1.0",
     "vuex-class": "^0.3.1"
   },
   "devDependencies": {
-    "@types/node": "^10.12.0",
-    "@vue/cli-plugin-babel": "^3.0.5",
-    "@vue/cli-plugin-eslint": "^3.0.5",
-    "@vue/cli-plugin-typescript": "^3.0.5",
-    "@vue/cli-service": "^3.0.5",
-    "@vue/eslint-config-prettier": "^3.0.5",
-    "@vue/eslint-config-typescript": "^3.0.5",
-    "less": "^3.0.4",
+    "@types/lodash.get": "^4.4.4",
+    "@types/node": "^10.12.19",
+    "@vue/cli-plugin-babel": "^3.3.0",
+    "@vue/cli-plugin-eslint": "^3.3.0",
+    "@vue/cli-plugin-typescript": "^3.3.0",
+    "@vue/cli-service": "^3.3.1",
+    "@vue/eslint-config-prettier": "^4.0.1",
+    "@vue/eslint-config-typescript": "^3.2.1",
+    "less": "^3.9.0",
     "less-loader": "^4.1.0",
-    "lint-staged": "^7.3.0",
-    "typescript": "3.1.3",
-    "typescript-eslint-parser": "^20.0.0",
-    "vue-template-compiler": "^2.5.17",
+    "lint-staged": "^8.1.1",
+    "typescript": "3.2.4",
+    "typescript-eslint-parser": "^22.0.0",
+    "vue-template-compiler": "^2.5.22",
     "vuex-router-sync": "^5.0.0"
   },
   "eslintConfig": {
