--- a/package.json
+++ b/package.json
@@ -13,28 +13,30 @@
     "lodash.get": "^4.4.2",
     "qs": "^6.6.0",
     "store2": "^2.7.1",
-    "vue": "^2.5.22",
-    "vue-class-component": "^6.3.2",
+    "vue": "^2.6.7",
+    "vue-class-component": "^7.0.1",
     "vue-property-decorator": "^7.3.0",
     "vue-router": "^3.0.2",
     "vuex": "^3.1.0",
     "vuex-class": "^0.3.1"
   },
   "devDependencies": {
-    "@types/lodash.get": "^4.4.4",
-    "@types/node": "^10.12.19",
-    "@vue/cli-plugin-babel": "^3.3.0",
-    "@vue/cli-plugin-eslint": "^3.3.0",
-    "@vue/cli-plugin-typescript": "^3.3.0",
-    "@vue/cli-service": "^3.3.1",
+    "@types/lodash.get": "^4.4.5",
+    "@types/node": "^11.9.5",
+    "@vue/cli-plugin-babel": "^3.4.1",
+    "@vue/cli-plugin-eslint": "^3.4.1",
+    "@vue/cli-plugin-typescript": "^3.4.1",
+    "@vue/cli-service": "^3.4.1",
     "@vue/eslint-config-prettier": "^4.0.1",
-    "@vue/eslint-config-typescript": "^3.2.1",
+    "@vue/eslint-config-typescript": "^4.0.0",
+    "eslint": "^5.14.1",
+    "eslint-plugin-vue": "^5.2.2",
     "less": "^3.9.0",
     "less-loader": "^4.1.0",
-    "lint-staged": "^8.1.1",
-    "typescript": "3.2.4",
+    "lint-staged": "^8.1.4",
+    "typescript": "3.3.3333",
     "typescript-eslint-parser": "^22.0.0",
-    "vue-template-compiler": "^2.5.22",
+    "vue-template-compiler": "^2.6.7",
     "vuex-router-sync": "^5.0.0"
   },
   "eslintConfig": {
@@ -51,7 +53,7 @@
       "no-console": 0
     },
     "parserOptions": {
-      "parser": "typescript-eslint-parser"
+      "parser": "@typescript-eslint/parser"
     }
   },
   "postcss": {
