--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@types/qs": "^6.5.1",
+    "ant-design-vue": "^1.3.5",
     "axios": "^0.18.0",
     "lodash.get": "^4.4.2",
     "qs": "^6.6.0",
@@ -29,6 +30,7 @@
     "@vue/cli-service": "^3.4.1",
     "@vue/eslint-config-prettier": "^4.0.1",
     "@vue/eslint-config-typescript": "^4.0.0",
+    "babel-plugin-import": "^1.11.0",
     "eslint": "^5.14.1",
     "eslint-plugin-vue": "^5.2.2",
     "less": "^3.9.0",
